<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24dp"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/icon_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/Header_XL_size"
        android:layout_marginBottom="36dp"
        android:text="@string/stock_exchange"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtTermsConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="createAccount"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/create_account"
        android:textColor="@color/TermsConditions"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:layout_marginBottom="24dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:onClick="createAccount"
            android:paddingHorizontal="13dp"
            android:paddingVertical="7dp"
            android:text="@string/next"
            android:textSize="20sp" />


    </RelativeLayout>

</LinearLayout>